<resources>
    <string name="app_name">Gamers Bay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_person">Account</string>
    <string name="nav_settings">Settings</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="browse_matches">Browse Matches</string>
    <string name="matches_available">Matches Available :</string>
    <string name="call_of_duty_mobile">CALL OF DUTY MOBILE</string>
    <string name="pubg">PUBG</string>
    <string name="free_fire">FREE|FIRE</string>

    <!-- list_pref_entries-->
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <!--list_pref_entry_values-->
    <string name="pref_color_red_value">Red</string>
    <string name="pref_color_blue_value">Blue</string>
    <string name="pref_color_green_value">Green</string>

    <!--keys-->

    <string name="preference_category_display">preference_category_display</string>
    <string name="dark_mode">dark_mode</string>
    <string name="themes">themes</string>
    <string name="isLoggedIn">isLoggedIn</string>

    <string name="preference_category_notifications">preference_category_notifications</string>
    <string name="turn_on_notifications">notifications</string>


    <string-array name="paymentOptions">
        <item>CBE</item>
        <item>M-Birr</item>
        <item>Amole</item>
        <item>HelloCash</item>
    </string-array>
    <string name="title_activity_leader_board">LeaderBoard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="pubg_txt">
        check out who is  the top player in PUBG
    </string>

    <string name="freefire_txt">
        check out who is  the top player in PUBG
    </string>

    <string name="codm_txt">
        check out who is  the top player in PUBG
    </string>


</resources>